Updated the FDL licence text from version 1.2 to 1.3.

--- a/fdl.html
+++ b/fdl.html
@@ -3,13 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-  Copyright (c) 2005-2012 Edward d'Auvergne.
-  Permission is granted to copy, distribute and/or modify this document
-  under the terms of the GNU Free Documentation License, Version 1.2
-  or any later version published by the Free Software Foundation;
-  with no Invariant Sections, no Front-Cover Texts, and no Back-Cover
-  Texts.  A copy of the license is included in the section entitled "GNU
-  Free Documentation License".
+    Copyright (c) 2005-2012,2017 Edward d'Auvergne.
+
+    Permission is granted to copy, distribute and/or modify this document
+    under the terms of the GNU Free Documentation License, Version 1.3
+    or any later version published by the Free Software Foundation;
+    with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+    A copy of the license is included in the section titled "GNU
+    Free Documentation License" (fdl.html).
 -->
 
 <head>
@@ -26,19 +27,18 @@
   <div class="main_box">
     <h1>GNU Free Documentation License</h1>
 <p>
-  Version 1.2, November 2002
+  Version 1.3, 3 November 2008
 </p>
 
 <pre>
-  Copyright (C) 2000,2001,2002  Free Software Foundation, Inc.
-  51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+  Copyright (C) 2000, 2001, 2002, 2007, 2008 Free Software Foundation, Inc.
+      <http://fsf.org/>
   Everyone is permitted to copy and distribute verbatim copies
   of this license document, but changing it is not allowed.
 </pre>
 
 <p>
   <strong>0. PREAMBLE</strong>
-
 </p>
 
 <p>
@@ -91,14 +91,13 @@
 </p>
 
 <p>
-
   A "Secondary Section" is a named appendix or a front-matter section of
   the Document that deals exclusively with the relationship of the
-  publishers or authors of the Document to the Document's overall subject
-  (or to related matters) and contains nothing that could fall directly
-  within that overall subject.  (Thus, if the Document is in part a
-  textbook of mathematics, a Secondary Section may not explain any
-  mathematics.)  The relationship could be a matter of historical
+  publishers or authors of the Document to the Document's overall
+  subject (or to related matters) and contains nothing that could fall
+  directly within that overall subject.  (Thus, if the Document is in
+  part a textbook of mathematics, a Secondary Section may not explain
+  any mathematics.)  The relationship could be a matter of historical
   connection with the subject or with related matters, or of legal,
   commercial, philosophical, ethical or political position regarding
   them.
@@ -134,7 +133,6 @@
   or discourage subsequent modification by readers is not Transparent.
   An image format is not Transparent if used for any substantial amount
   of text.  A copy that is not "Transparent" is called "Opaque".
-
 </p>
 
 <p>
@@ -157,6 +155,11 @@
   formats which do not have any title page as such, "Title Page" means
   the text near the most prominent appearance of the work's title,
   preceding the beginning of the body of the text.
+</p>
+
+<p>
+  The "publisher" means any person or entity that distributes copies of
+  the Document to the public.
 </p>
 
 <p>
@@ -186,8 +189,8 @@
   You may copy and distribute the Document in any medium, either
   commercially or noncommercially, provided that this License, the
   copyright notices, and the license notice saying this License applies
-  to the Document are reproduced in all copies, and that you add no other
-  conditions whatsoever to those of this License.  You may not use
+  to the Document are reproduced in all copies, and that you add no
+  other conditions whatsoever to those of this License.  You may not use
   technical measures to obstruct or control the reading or further
   copying of the copies you make or distribute.  However, you may accept
   compensation in exchange for copies.  If you distribute a large enough
@@ -195,7 +198,6 @@
 </p>
 
 <p>
-
   You may also lend copies, under the same conditions stated above, and
   you may publicly display copies.
 </p>
@@ -224,7 +226,6 @@
   legibly, you should put the first ones listed (as many as fit
   reasonably) on the actual cover, and continue the rest onto adjacent
   pages.
-
 </p>
 
 <p>
@@ -244,8 +245,9 @@
 
 <p>
   It is requested, but not required, that you contact the authors of the
-  Document well before redistributing any large number of copies, to give
-  them a chance to provide you with an updated version of the Document.
+  Document well before redistributing any large number of copies, to
+  give them a chance to provide you with an updated version of the
+  Document.
 </p>
 
 <p>
@@ -272,7 +274,6 @@
   Version, together with at least five of the principal authors of the
   Document (all of its principal authors, if it has fewer than five),
   unless they release you from this requirement.</li>
-
   <li><strong>C.</strong> State on the Title page the name of the publisher of the
   Modified Version, as the publisher.</li>
   <li><strong>D.</strong> Preserve all the copyright notices of the Document.</li>
@@ -281,7 +282,6 @@
   <li><strong>F.</strong> Include, immediately after the copyright notices, a license notice
   giving the public permission to use the Modified Version under the
   terms of this License, in the form shown in the Addendum below.</li>
-
   <li><strong>G.</strong> Preserve in that license notice the full lists of Invariant Sections
   and required Cover Texts given in the Document's license notice.</li>
   <li><strong>H.</strong> Include an unaltered copy of this License.</li>
@@ -299,7 +299,6 @@
   You may omit a network location for a work that was published at
   least four years before the Document itself, or if the original
   publisher of the version it refers to gives permission.</li>
-
   <li><strong>K.</strong> For any section Entitled "Acknowledgements" or "Dedications",
   Preserve the Title of the section, and preserve in the section all
   the substance and tone of each of the contributor acknowledgements
@@ -311,7 +310,6 @@
   may not be included in the Modified Version.</li>
   <li><strong>N.</strong> Do not retitle any existing section to be Entitled "Endorsements"
   or to conflict in title with any Invariant Section.</li>
-
   <li><strong>O.</strong> Preserve any Warranty Disclaimers.</li>
 </ul>
 
@@ -355,7 +353,6 @@
 </p>
 
 <p>
-
   You may combine the Document with other documents released under this
   License, under the terms defined in section 4 above for modified
   versions, provided that you include in the combination all of the
@@ -385,22 +382,23 @@
 
 <p>
   <strong>6. COLLECTIONS OF DOCUMENTS</strong>
-
 </p>
 
 <p>
-  You may make a collection consisting of the Document and other documents
-  released under this License, and replace the individual copies of this
-  License in the various documents with a single copy that is included in
-  the collection, provided that you follow the rules of this License for
-  verbatim copying of each of the documents in all other respects.
+  You may make a collection consisting of the Document and other
+  documents released under this License, and replace the individual
+  copies of this License in the various documents with a single copy
+  that is included in the collection, provided that you follow the rules
+  of this License for verbatim copying of each of the documents in all
+  other respects.
 </p>
 
 <p>
-  You may extract a single document from such a collection, and distribute
-  it individually under this License, provided you insert a copy of this
-  License into the extracted document, and follow this License in all
-  other respects regarding verbatim copying of that document.
+  You may extract a single document from such a collection, and
+  distribute it individually under this License, provided you insert a
+  copy of this License into the extracted document, and follow this
+  License in all other respects regarding verbatim copying of that
+  document.
 </p>
 
 <p>
@@ -459,14 +457,36 @@
 </p>
 
 <p>
+  You may not copy, modify, sublicense, or distribute the Document
+  except as expressly provided under this License.  Any attempt
+  otherwise to copy, modify, sublicense, or distribute it is void, and
+  will automatically terminate your rights under this License.
+</p>
 
-  You may not copy, modify, sublicense, or distribute the Document except
-  as expressly provided for under this License.  Any other attempt to
-  copy, modify, sublicense or distribute the Document is void, and will
-  automatically terminate your rights under this License.  However,
-  parties who have received copies, or rights, from you under this
-  License will not have their licenses terminated so long as such
-  parties remain in full compliance.
+<p>
+  However, if you cease all violation of this License, then your license
+  from a particular copyright holder is reinstated (a) provisionally,
+  unless and until the copyright holder explicitly and finally
+  terminates your license, and (b) permanently, if the copyright holder
+  fails to notify you of the violation by some reasonable means prior to
+  60 days after the cessation.
+</p>
+
+<p>
+  Moreover, your license from a particular copyright holder is
+  reinstated permanently if the copyright holder notifies you of the
+  violation by some reasonable means, this is the first time you have
+  received notice of violation of this License (for any work) from that
+  copyright holder, and you cure the violation prior to 30 days after
+  your receipt of the notice.
+</p>
+
+<p>
+  Termination of your rights under this section does not terminate the
+  licenses of parties who have received copies or rights from you under
+  this License.  If your rights have been terminated and not permanently
+  reinstated, receipt of a copy of some or all of the same material does
+  not give you any rights to use it.
 </p>
 
 <p>
@@ -474,10 +494,10 @@
 </p>
 
 <p>
-  The Free Software Foundation may publish new, revised versions
-  of the GNU Free Documentation License from time to time.  Such new
-  versions will be similar in spirit to the present version, but may
-  differ in detail to address new problems or concerns.  See
+  The Free Software Foundation may publish new, revised versions of the
+  GNU Free Documentation License from time to time.  Such new versions
+  will be similar in spirit to the present version, but may differ in
+  detail to address new problems or concerns.  See
   http://www.gnu.org/copyleft/.
 </p>
 
@@ -489,11 +509,55 @@
   of any later version that has been published (not as a draft) by the
   Free Software Foundation.  If the Document does not specify a version
   number of this License, you may choose any version ever published (not
-  as a draft) by the Free Software Foundation.
-
+  as a draft) by the Free Software Foundation.  If the Document
+  specifies that a proxy can decide which future versions of this
+  License can be used, that proxy's public statement of acceptance of a
+  version permanently authorizes you to choose that version for the
+  Document.
 </p>
 
-<h3>How to use this License for your documents</h3>
+<p>
+  <strong>11. RELICENSING</strong>
+</p>
+
+<p>
+  "Massive Multiauthor Collaboration Site" (or "MMC Site") means any
+  World Wide Web server that publishes copyrightable works and also
+  provides prominent facilities for anybody to edit those works.  A
+  public wiki that anybody can edit is an example of such a server.  A
+  "Massive Multiauthor Collaboration" (or "MMC") contained in the site
+  means any set of copyrightable works thus published on the MMC site.
+</p>
+
+<p>
+  "CC-BY-SA" means the Creative Commons Attribution-Share Alike 3.0
+  license published by Creative Commons Corporation, a not-for-profit
+  corporation with a principal place of business in San Francisco,
+  California, as well as future copyleft versions of that license
+  published by that same organization.
+</p>
+
+<p>
+  "Incorporate" means to publish or republish a Document, in whole or in
+  part, as part of another Document.
+</p>
+
+<p>
+  An MMC is "eligible for relicensing" if it is licensed under this
+  License, and if all works that were first published under this License
+  somewhere other than this MMC, and subsequently incorporated in whole or
+  in part into the MMC, (1) had no cover texts or invariant sections, and
+  (2) were thus incorporated prior to November 1, 2008.
+</p>
+
+<p>
+  The operator of an MMC Site may republish an MMC contained in the site
+  under CC-BY-SA on the same site at any time before August 1, 2009,
+  provided the MMC is eligible for relicensing.
+</p>
+
+
+<h3>ADDENDUM: How to use this License for your documents</h3>
 
 <p>
   To use this License in a document you have written, include a copy of
@@ -504,17 +568,16 @@
 <pre>
   Copyright (c)  YEAR  YOUR NAME.
   Permission is granted to copy, distribute and/or modify this document
-  under the terms of the GNU Free Documentation License, Version 1.2
+  under the terms of the GNU Free Documentation License, Version 1.3
   or any later version published by the Free Software Foundation;
-  with no Invariant Sections, no Front-Cover Texts, and no Back-Cover
-  Texts.  A copy of the license is included in the section entitled "GNU
+  with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+  A copy of the license is included in the section entitled "GNU
   Free Documentation License".
 </pre>
 
 <p>
   If you have Invariant Sections, Front-Cover Texts and Back-Cover Texts,
   replace the "with...Texts." line with this:
-
 </p>
 
 <pre>
