--- a/screenshots.html
+++ b/screenshots.html
@@ -3,14 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-  Copyright (c) 2005-2012 Edward d'Auvergne.
-  Copyright (c) 2011 Sebastien Morin.
-  Permission is granted to copy, distribute and/or modify this document
-  under the terms of the GNU Free Documentation License, Version 1.2
-  or any later version published by the Free Software Foundation;
-  with no Invariant Sections, no Front-Cover Texts, and no Back-Cover
-  Texts.  A copy of the license is included in the section entitled "GNU
-  Free Documentation License".
+    Copyright (c) 2005-2012 Edward d'Auvergne.
+    Copyright (c) 2011 Sebastien Morin.
+
+    Permission is granted to copy, distribute and/or modify this document
+    under the terms of the GNU Free Documentation License, Version 1.3
+    or any later version published by the Free Software Foundation;
+    with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+    A copy of the license is included in the section titled "GNU
+    Free Documentation License" (fdl.html).
 -->
 
 <head>
