Isolated and commented all of the SSI includes.
This is for better handling of merges into different branches.

--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -15,12 +15,16 @@
 
 <head>
   <title>relax - NMR relaxation dispersion software</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="../head.html" -->
+
   <meta name="keywords" content="Software, NMR, relaxation data, relaxation dispersion." />
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="../header.html" -->
 <!--#include virtual="../menu.html" -->
 
@@ -338,6 +342,8 @@
   </div>
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="../footer.html" -->
+
 </body>
 </html>
