--- a/faq.html
+++ b/faq.html
@@ -15,11 +15,15 @@
 
 <head>
   <title>relax frequently asked questions (FAQ)</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -71,6 +75,8 @@
 
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
