--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 
 <head>
   <title>relax - NMR analysis software for: model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, and frame order theory analyses.</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -65,6 +69,8 @@
   </div>
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
