--- a/communication.html
+++ b/communication.html
@@ -15,11 +15,15 @@
 
 <head>
   <title>relax communications - the bug tracker and mailing lists</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -191,6 +195,8 @@
   </div>
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
