--- a/download.html
+++ b/download.html
@@ -16,11 +16,15 @@
 
 <head>
   <title>relax downloads</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -3105,6 +3109,8 @@
   </div>
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
