--- a/events.html
+++ b/events.html
@@ -16,6 +16,8 @@
 
 <head>
   <title>relax events</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
 <style type="text/css">
 #conf-table td {
@@ -37,10 +39,12 @@
     width: 18%;
 }
 </style>
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -171,6 +175,8 @@
   </div>
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
