--- a/features.html
+++ b/features.html
@@ -16,11 +16,15 @@
 
 <head>
   <title>relax features - Model-free, RMSD, R1, R2, NOE, Consistency testing, Frame order, N-state model</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -141,6 +145,8 @@ used as optimisation engines replacing the minimisation algorithms built into re
  </div>
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
