--- a/marc.html
+++ b/marc.html
@@ -16,11 +16,15 @@
 
 <head>
   <title>relax references</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 
 <div class="main">
@@ -35,6 +39,8 @@
  </div>
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
