--- a/qr.html
+++ b/qr.html
@@ -16,11 +16,15 @@
 <head>
   <title>QR Code redirection page</title>
   <meta http-equiv="REFRESH" content="5; url=/" />
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -36,6 +40,8 @@
 
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
