--- a/windows_devel.html
+++ b/windows_devel.html
@@ -15,11 +15,15 @@
 
 <head>
   <title>MS Windows development platform for relax</title>
+
+  <!-- Common HTML head include -->
   <!--#include virtual="head.html" -->
+
 </head>
 
 <body>
 
+<!-- Common relax webpage header and side menu includes -->
 <!--#include virtual="header.html" -->
 <!--#include virtual="menu.html" -->
 
@@ -417,6 +421,8 @@
 
 </div>
 
+<!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
+
 </body>
 </html>
