Converted all of the SSI includes into Jekyll {% include x.html %} statements.

--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -17,7 +17,7 @@
   <title>relax - NMR relaxation dispersion software</title>
 
   <!-- Common HTML head include -->
-  <!--#include virtual="../head.html" -->
+  {% include head.html %}
 
   <meta name="keywords" content="Software, NMR, relaxation data, relaxation dispersion." />
 </head>
@@ -25,8 +25,8 @@
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-<!--#include virtual="../header.html" -->
-<!--#include virtual="../menu.html" -->
+{% include header.html %}
+{% include menu.html %}
 
 <div class="main">
   <div class="main_box">
@@ -343,7 +343,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-<!--#include virtual="../footer.html" -->
+{% include footer.html %}
 
 </body>
 </html>
