--- a/devel_platform.html
+++ b/devel_platform.html
@@ -17,15 +17,15 @@
   <title>relax development platform setup</title>
 
   <!-- Common HTML head include -->
-  <!--#include virtual="head.html" -->
+  {% include head.html %}
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-<!--#include virtual="header.html" -->
-<!--#include virtual="menu.html" -->
+{% include header.html %}
+{% include menu.html %}
 
 <div class="main">
  <div class="main_box">
@@ -40,7 +40,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-<!--#include virtual="footer.html" -->
+{% include footer.html %}
 
 </body>
 </html>
