--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   <title>relax - NMR analysis software for: model-free, NMR relaxation (R1, R2, NOE), reduced spectral density mapping, N-state models, and frame order theory analyses.</title>
 
   <!-- Common HTML head include -->
-  <!--#include virtual="head.html" -->
+  {% include head.html %}
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-<!--#include virtual="header.html" -->
-<!--#include virtual="menu.html" -->
+{% include header.html %}
+{% include menu.html %}
 
 <div class="main">
   <div class="main_box">
@@ -70,7 +70,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-<!--#include virtual="footer.html" -->
+{% include footer.html %}
 
 </body>
 </html>
