--- a/qr.html
+++ b/qr.html
@@ -18,15 +18,15 @@
   <meta http-equiv="REFRESH" content="5; url=/" />
 
   <!-- Common HTML head include -->
-  <!--#include virtual="head.html" -->
+  {% include head.html %}
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-<!--#include virtual="header.html" -->
-<!--#include virtual="menu.html" -->
+{% include header.html %}
+{% include menu.html %}
 
 <div class="main">
   <div class="main_box">
@@ -41,7 +41,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-<!--#include virtual="footer.html" -->
+{% include footer.html %}
 
 </body>
 </html>
