--- a/screenshots.html
+++ b/screenshots.html
@@ -18,15 +18,15 @@
   <title>relax screenshots</title>
 
   <!-- Common HTML head include -->
-  <!--#include virtual="head.html" -->
+  {% include head.html %}
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-<!--#include virtual="header.html" -->
-<!--#include virtual="menu.html" -->
+{% include header.html %}
+{% include menu.html %}
 
 <div class="main">
 <!-- Index -->
@@ -138,7 +138,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-<!--#include virtual="footer.html" -->
+{% include footer.html %}
 
 </body>
 </html>
