--- a/windows_devel.html
+++ b/windows_devel.html
@@ -17,15 +17,15 @@
   <title>MS Windows development platform for relax</title>
 
   <!-- Common HTML head include -->
-  <!--#include virtual="head.html" -->
+  {% include head.html %}
 
 </head>
 
 <body>
 
 <!-- Common relax webpage header and side menu includes -->
-<!--#include virtual="header.html" -->
-<!--#include virtual="menu.html" -->
+{% include header.html %}
+{% include menu.html %}
 
 <div class="main">
  <div class="main_box">
@@ -422,7 +422,7 @@
 </div>
 
 <!-- Common relax webpage footer include -->
-<!--#include virtual="footer.html" -->
+{% include footer.html %}
 
 </body>
 </html>
