--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <div class="clear"></div>
 
 <div class="footer">
- <div class="footer_left">This text is available under the terms of the <a href="/fdl.html">GNU Free Documentation License</a>.</div>
+ <div class="footer_left">This text is available under the terms of the <a href="/fdl.html">GNU Free Documentation License</a>, Version 1.3 or any later version published by the Free Software Foundation.</div>
  <div class="clear"></div>
 </div>
 <!-- End SSI footer -->
