Updated all of the tracker and mailing list information for a migration to SourceForge.
This is for the page http://www.nmr-relax.com/communication.html.

--- a/communication.html
+++ b/communication.html
@@ -35,7 +35,7 @@
     <h1>Interacting with the relax community</h1>
 
     <ul>
-     <li><a href="communication.html#bug_tracker">Bug Tracker</a></li>
+     <li><a href="communication.html#trackers">Bug, support request, and task trackers</a></li>
      <li><a href="communication.html#mailing-lists">Mailing lists</a>
      <ul>
       <li><a href="communication.html#relax-announce">relax-announce</a></li>
@@ -48,16 +48,15 @@
     </ul>
   </div>
 
-  <div class="main_box">
-    <h1>Gna! shutdown - Temporary migration status</h1>
+  <div id="trackers" class="main_box">
+    <h1>Bug, support request, and task trackers</h1>
 
-    <p>Without much warning, the <a href="https://en.wikipedia.org/wiki/Gna!">Gna! open source infrastructure</a> that relax relied upon was permanently shut down at the start of 2017.  A migration of relax's infrastructure is in progress, however both the bug tracker and the mailing lists are currently missing.  These will hopefully soon be back in place.  The old mailing list archives should nevertheless be accessible.</p>
-  </div>
+    <p>One of the philosophies in the construction of relax is that if there is something which is not immediately obvious, then that is considered a design bug.  If any flaws in relax are uncovered, including general design flaws, bugs in the code, documentation issues, etc, these can be <a href="https://sourceforge.net/p/nmr-relax/tickets/new/" title="Submit a bug">reported</a> within relax's <a href="https://sourceforge.net/p/nmr-relax/tickets/" title="Bug tracker">bug tracker</a> system.  Please do not report bugs to personal email addresses or to the mailing lists.</p>
 
-  <div id="bug_tracker" class="main_box">
-    <h1>Bug Tracker</h1>
+    <p>If you would like to ask for help or for a new feature, please instead use relax's <a href="https://sourceforge.net/p/nmr-relax/tickets-support/" title="Support request tracker">support request tracker</a> system.</p>
 
-    <p>One of the philosophies in the construction of relax is that if there is something which is not immediately obvious, then that is considered a design bug.  If any flaws in relax are uncovered, including general design flaws, bugs in the code, documentation issues, etc, these can be <a href="https://gna.org/bugs/?group=relax&amp;func=additem" title="Submit a bug">reported</a> within relax's <a href="https://gna.org/bugs/?group=relax" title="Bug tracker">bug tracker</a> system.  Please do not report bugs to personal email addresses or to the mailing lists.</p>
+    <p>A third tracker exists exclusively for relax developers &ndash; the <a href="https://sourceforge.net/p/nmr-relax/tickets-task/" title="Task tracker">task tracker</a>.  This is used for implementing new features, and only registered developers can use this tracker.</p>
+
   </div>
 
   <div id="mailing-lists" class="main_box">
@@ -67,7 +66,15 @@
 
     <div id="relax-announce" class="main_h2">
      <h2>relax-announce</h2>
-     <p>The relax announcement list, relax-announce at gna.org, is reserved for important announcements about the program including the release of new program versions. The amount of traffic on this list is relatively low. If you would like to receive information about relax you can subscribe to the list by vising the <a href="https://mail.gna.org/listinfo/relax-announce/">relax-announce information page</a>.  The announcements can be browsed in one of the official relax mailing list archives:</p>
+     <p>The relax announcement list, nmr-relax-announce at lists.sourceforge.net, is reserved for important announcements about the program including the release of new program versions. The amount of traffic on this list is relatively low. If you would like to receive information about relax you can subscribe to the list by vising the <a href="https://sourceforge.net/projects/nmr-relax/lists/nmr-relax-announce">relax-announce information page</a>.  The announcements can be browsed in one of the official relax mailing list archives:</p>
+     <ul class="main_ul">
+      <li>
+       <a href="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-announce/">SourceForge archives</a>
+      </li>
+     </ul>
+
+     <h3>Gna! archives</h3>
+     <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-announce mailing list include:</p>
      <ul class="main_ul">
       <li>
        <a href="mail.gna.org/public/relax-announce/">Local archives</a>
@@ -86,7 +93,15 @@
 
     <div id="relax-users" class="main_h2">
      <h2>relax-users</h2>
-      <p>If you would like to ask questions about relax, discuss certain features, receive help, or to communicate on any other subject related to relax, the mailing list <a href="mailto:relax-users at gna.org">relax-users at gna.org</a> is the place to post your message.  To subscribe to the list, go to the <a href="https://mail.gna.org/listinfo/relax-users/">relax-users information page</a>.  The messages can be browsed in one of the official relax mailing list archives:</p>
+      <p>If you would like to ask questions about relax, discuss certain features, receive help, or to communicate on any other subject related to relax, the mailing list <a href="mailto:nmr-relax-users at lists.sourceforge.net">nmr-relax-users at lists.sourceforge.net</a> is the place to post your message.  To subscribe to the list, go to the <a href="https://sourceforge.net/projects/nmr-relax/lists/nmr-relax-users">relax-users information page</a>.  The messages can be browsed in one of the official relax mailing list archives:</p>
+     <ul class="main_ul">
+      <li>
+       <a href="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-users">SourceForge archives</a>
+      </li>
+     </ul>
+
+     <h3>Gna! archives</h3>
+     <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-users mailing list include:</p>
      <ul class="main_ul">
       <li>
        <a href="mail.gna.org/public/relax-users/">Local archives</a>
@@ -105,7 +120,15 @@
 
     <div id="relax-devel" class="main_h2">
      <h2>relax-devel</h2>
-      <p>Another mailing list exists for posts relating to the development of relax.  The list is <a href="mailto:relax-devel at gna.org">relax-devel at gna.org</a> and to subscribe, go to the <a href="https://mail.gna.org/listinfo/relax-devel/">relax-devel information page</a>.  Feature requests, program design, or any other posts relating to relax's structure or code should be sent to this list instead.  The messages can be browsed in one of the official relax mailing list archives:</p>
+      <p>Another mailing list exists for posts relating to the development of relax.  The list is <a href="mailto:nmr-relax-devel at lists.sourceforge.net">nmr-relax-devel at lists.sourceforge.net</a> and to subscribe, go to the <a href="https://sourceforge.net/projects/nmr-relax/lists/nmr-relax-devel">relax-devel information page</a>.  Feature requests, program design, or any other posts relating to relax's structure or code should be sent to this list instead.  The messages can be browsed in one of the official relax mailing list archives:</p>
+     <ul class="main_ul">
+      <li>
+       <a href="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-devel">SourceForge archives</a>
+      </li>
+     </ul>
+
+     <h3>Gna! archives</h3>
+     <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-devel mailing list include:</p>
      <ul class="main_ul">
       <li>
        <a href="mail.gna.org/public/relax-devel/">Local archives</a>
@@ -124,7 +147,15 @@
 
     <div id="relax-commits" class="main_h2">
      <h2>relax-commits</h2>
-      <p>One last mailing list is the relax commits list.  This list is reserved for automatically generated posts created by the version control software which looks after the relax source code and these web pages.  If you would like to become a developer, you can subscribe to the list at <a href="https://mail.gna.org/listinfo/relax-commits/">relax-commits information page</a>.  The messages can be browsed in one of the official relax mailing list archives:</p>
+      <p>One last mailing list is the relax commits list.  This list is reserved for automatically generated posts created by the version control software which looks after the relax source code and these web pages.  If you would like to become a developer, you can subscribe to the list at <a href="https://sourceforge.net/projects/nmr-relax/lists/nmr-relax-commits">relax-commits information page</a>.  The messages can be browsed in one of the official relax mailing list archives:</p>
+     <ul class="main_ul">
+      <li>
+       <a href="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-commits">SourceForge archives</a>
+      </li>
+     </ul>
+
+     <h3>Gna! archives</h3>
+     <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-commits mailing list include:</p>
      <ul class="main_ul">
       <li>
        <a href="mail.gna.org/public/relax-commits/">Local archives</a>
@@ -166,10 +197,22 @@
           <input type="hidden" name="domains" value="/"/>
             <br />
             <input type="radio" name="sitesearch" value=""/> WWW
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-announce"/> relax-announce (Gna! archive)
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-users" checked="checked"/> relax-users (Gna! archive)
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-devel"/> relax-devel (Gna! archive)
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-commits"/> relax-commits (Gna! archive)
+            <br />
+            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-announce"/> relax-announce (SourceForge archive)
+            <br />
+            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-users" checked="checked"/> relax-users (SourceForge archive)
+            <br />
+            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-devel"/> relax-devel (SourceForge archive)
+            <br />
+            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-commits"/> relax-commits (SourceForge archive)
+            <br />
+            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-announce"/> relax-announce (local archive)
+            <br />
+            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-users"/> relax-users (local archive)
+            <br />
+            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-devel"/> relax-devel (local archive)
+            <br />
+            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-commits"/> relax-commits (local archive)
         </td>
       </tr>
       </table>
