--- a/communication.html
+++ b/communication.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2006-2012 Edward d'Auvergne.
+    Copyright (c) 2006-2012,2018 Edward d'Auvergne.
 
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.3
@@ -16,7 +16,7 @@
 -->
 
 <head>
-  <title>relax communications - the bug tracker and mailing lists</title>
+  <title>relax communications - the trackers and mailing lists</title>
 
   <!-- Common HTML head include -->
   {% include head.html %}
