Title updates and Google search fixes for http://www.nmr-relax.com/communication.html.

--- a/communication.html
+++ b/communication.html
@@ -73,7 +73,7 @@
       </li>
      </ul>
 
-     <h3>Gna! archives</h3>
+     <h3>Old Gna! archives</h3>
      <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-announce mailing list include:</p>
      <ul class="main_ul">
       <li>
@@ -100,7 +100,7 @@
       </li>
      </ul>
 
-     <h3>Gna! archives</h3>
+     <h3>Old Gna! archives</h3>
      <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-users mailing list include:</p>
      <ul class="main_ul">
       <li>
@@ -127,7 +127,7 @@
       </li>
      </ul>
 
-     <h3>Gna! archives</h3>
+     <h3>Old Gna! archives</h3>
      <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-devel mailing list include:</p>
      <ul class="main_ul">
       <li>
@@ -154,7 +154,7 @@
       </li>
      </ul>
 
-     <h3>Gna! archives</h3>
+     <h3>Old Gna! archives</h3>
      <p>Previously relax was hosted on the Gna! open source infrastructure.  Mailing list archives for the old relax-commits mailing list include:</p>
      <ul class="main_ul">
       <li>
@@ -198,21 +198,21 @@
             <br />
             <input type="radio" name="sitesearch" value=""/> WWW
             <br />
-            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-announce"/> relax-announce (SourceForge archive)
+            <input type="radio" name="sitesearch" value="sourceforge.net/p/nmr-relax/mailman/nmr-relax-announce"/> relax-announce (SourceForge archive)
             <br />
-            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-users" checked="checked"/> relax-users (SourceForge archive)
+            <input type="radio" name="sitesearch" value="sourceforge.net/p/nmr-relax/mailman/nmr-relax-users" checked="checked"/> relax-users (SourceForge archive)
             <br />
-            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-devel"/> relax-devel (SourceForge archive)
+            <input type="radio" name="sitesearch" value="sourceforge.net/p/nmr-relax/mailman/nmr-relax-devel"/> relax-devel (SourceForge archive)
             <br />
-            <input type="radio" name="sitesearch" value="https://sourceforge.net/p/nmr-relax/mailman/nmr-relax-commits"/> relax-commits (SourceForge archive)
+            <input type="radio" name="sitesearch" value="sourceforge.net/p/nmr-relax/mailman/nmr-relax-commits"/> relax-commits (SourceForge archive)
             <br />
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-announce"/> relax-announce (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-announce"/> relax-announce (local archive)
             <br />
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-users"/> relax-users (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-users"/> relax-users (local archive)
             <br />
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-devel"/> relax-devel (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-devel"/> relax-devel (local archive)
             <br />
-            <input type="radio" name="sitesearch" value="mail.gna.org/public/relax-commits"/> relax-commits (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-commits"/> relax-commits (local archive)
         </td>
       </tr>
       </table>
