Refined the Google search text for http://www.nmr-relax.com/communication.html.

--- a/communication.html
+++ b/communication.html
@@ -206,13 +206,13 @@
             <br />
             <input type="radio" name="sitesearch" value="sourceforge.net/p/nmr-relax/mailman/nmr-relax-commits"/> relax-commits (SourceForge archive)
             <br />
-            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-announce"/> relax-announce (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-announce"/> relax-announce (Old Gna! archive)
             <br />
-            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-users"/> relax-users (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-users"/> relax-users (Old Gna! archive)
             <br />
-            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-devel"/> relax-devel (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-devel"/> relax-devel (Old Gna! archive)
             <br />
-            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-commits"/> relax-commits (local archive)
+            <input type="radio" name="sitesearch" value="www.nmr-relax.com/mail.gna.org/public/relax-commits"/> relax-commits (Old Gna! archive)
         </td>
       </tr>
       </table>
