--- a/links.html
+++ b/links.html
@@ -162,9 +162,9 @@
     </tr>
 
     <tr id="Free_software_directory" class="link_tr">
-      <td class="link_logo_td"><a href="http://directory.fsf.org/wiki/Relax"><img src="images/heckert_gnu.small.png" alt="The Free Software Directory" class="image"/></a></td>
+      <td class="link_logo_td"><a href="http://directory.fsf.org/wiki/relax"><img src="images/heckert_gnu.small.png" alt="The Free Software Directory" class="image"/></a></td>
       <td>The Free Software Directory.</td>
-      <td>The relax project page is <a href="http://directory.fsf.org/wiki/Relax">http://directory.fsf.org/wiki/Relax</a>.</td>
+      <td>The relax project page is <a href="http://directory.fsf.org/wiki/relax">http://directory.fsf.org/wiki/relax</a>.</td>
     </tr>
 
     <tr id="Linuxlinks" class="link_tr">
