Links: Fix for the changed Open Source Software Directory categories.

--- a/links.html
+++ b/links.html
@@ -186,9 +186,9 @@
     </tr>
 
     <tr id="Open_source_software_directory" class="link_tr">
-      <td class="link_logo_td"><a href="http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio"><img src="images/open_source_software_directory.png" alt="Open Source Software Directory logo" class="image"/></a></td>
+      <td class="link_logo_td"><a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors"><img src="images/open_source_software_directory.png" alt="Open Source Software Directory logo" class="image"/></a></td>
       <td>Use the Open Source Software Directory to find the best free and open-source software for home and business.</td>
-      <td>On the chemistry and biology page <a href="http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio">http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio</a>.</td>
+      <td>On the molecule editors page <a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors"></a>https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors.</td>
     </tr>
 
     <tr id="archive_today" class="link_tr">
