Links: Fix for the Open Source Software Directory link.

--- a/links.html
+++ b/links.html
@@ -188,7 +188,7 @@
     <tr id="Open_source_software_directory" class="link_tr">
       <td class="link_logo_td"><a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors"><img src="images/open_source_software_directory.png" alt="Open Source Software Directory logo" class="image"/></a></td>
       <td>Use the Open Source Software Directory to find the best free and open-source software for home and business.</td>
-      <td>On the molecule editors page <a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors"></a>https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors.</td>
+      <td>In the <a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors">molecule editors</a> cateogory.</td>
     </tr>
 
     <tr id="archive_today" class="link_tr">
